# orygin-kampus

./: .env.example  .gitignore  README.md  pyproject.toml  tailwind.config.js
apps/home/: apps.py  urls.py  views.py
config/: urls.py
config/settings/: base.py  development.py  production.py  testing.py
static/css/: custom.css
static/images/: site.webmanifest
static/js/: main.js
templates/: base.html  contact.html  home.html  mission.html  offres.html  parcours.html  partenaires.html  qui_sommes_nous.html
